--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,8 @@ categories = ["network-programming"]
 readme = "README.md"
 
 [dependencies]
-libbpf-sys = "0.7.0+v0.7.0"
+#libbpf-sys = "0.7.0+v0.7.0"
+libbpf-sys = "0.3.0-2"
 libc = "0.2"
 errno = "0.2"
 arraydeque = "0.4"
